--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>
         <H4>Contact me via:</H4>
         <ul>
-            <li> <a href="../4.3_1 HTML Porfolio Project/public/contact.html">My contact page</a> </li>
+            <li> <a href="./public/contact.html">My contact page</a> </li>
             <li> <a href="https://www.linkedin.com/in/ion-gaidarji-3b4865138">My linkedin page </a></li>
             <li> <a href="https://www.facebook.com/gaidarjiion">My Facebook page </a></li>
             <li><a href="https://t.me/IonGaidarji">My telegram </a> (Click or scan the QR)
